# claude-kb

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  LICENSE  README.md  SECURITY.md  compose.yml  pyproject.toml  sync_hybrid.py
.claude/: CLAUDE.md
docs/: AI_COMMAND_SPEC.md
src/claude_kb/: __init__.py  cli.py  config.py  core.py  db.py  formatters.py  import_claude.py  mcp.py  models.py  search.py
tests/: test_search_service.py  test_sparse_embedding.py
